--- a/TeamCores.Misc/TeamCores.Misc.csproj
+++ b/TeamCores.Misc/TeamCores.Misc.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Filters\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
+  </ItemGroup>
+
 </Project>
