加入全局异常处理及领域层

--- a/TeamCores.DomainService/TeamCores.Domain.csproj
+++ b/TeamCores.DomainService/TeamCores.Domain.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
+    <ProjectReference Include="..\TeamCores.Common\TeamCores.Common.csproj" />
+    <ProjectReference Include="..\TeamCores.Data\TeamCores.Data.csproj" />
   </ItemGroup>
 
 </Project>
