--- a/TeamCores.Web/TeamCores.Web.csproj
+++ b/TeamCores.Web/TeamCores.Web.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TeamCores.Common\TeamCores.Common.csproj" />
     <ProjectReference Include="..\TeamCores.Data\TeamCores.Data.csproj" />
+    <ProjectReference Include="..\TeamCores.ExceptionHandler\TeamCores.ExceptionHandler.csproj" />
     <ProjectReference Include="..\TeamCores.Misc\TeamCores.Misc.csproj" />
     <ProjectReference Include="..\TeamCores.Models\TeamCores.Models.csproj" />
     <ProjectReference Include="..\TeamCores.Tasks\TeamCores.Tasks.csproj" />
