--- a/TeamCores.Web/TeamCores.Web.csproj
+++ b/TeamCores.Web/TeamCores.Web.csproj
@@ -18,8 +18,10 @@
 
   <ItemGroup>
     <Content Include="wwwroot\css\style.css" />
+    <Content Include="wwwroot\css\user\add.css" />
     <Content Include="wwwroot\css\vueui.css" />
     <Content Include="wwwroot\js\common.js" />
+    <Content Include="wwwroot\js\pattern.js" />
     <Content Include="wwwroot\js\sidebar.js" />
     <Content Include="wwwroot\js\study.enums.js" />
     <Content Include="wwwroot\js\vue\menu.js" />
