文件上传功能及接口，缩略图处理

--- a/TeamCores.Web/TeamCores.Web.csproj
+++ b/TeamCores.Web/TeamCores.Web.csproj
@@ -53,6 +53,7 @@
     <ProjectReference Include="..\TeamCores.Misc\TeamCores.Misc.csproj" />
     <ProjectReference Include="..\TeamCores.Models\TeamCores.Models.csproj" />
     <ProjectReference Include="..\TeamCores.Tasks\TeamCores.Tasks.csproj" />
+    <ProjectReference Include="..\TeamCores.Uploader\TeamCores.Uploader.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\lib\" />
