--- a/TeamCores.Web/appsettings.json
+++ b/TeamCores.Web/appsettings.json
@@ -1,10 +1,17 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+	"Logging": {
+		"IncludeScopes": false,
+		"LogLevel": {
+			"Default": "Debug",
+			"System": "Information",
+			"Microsoft": "Information"
+		}
+	},
+	"Upload": {
+		"SavePath": "/upload", //默认上传目录
+		"LimitSize": 10000, //最大上传文件大小（单位:KB）
+		"EncoderQualityValue": 60, //默认压缩质量（L）
+		"EncoderColorDepthValue": 32, //默认压缩色彩（L）
+		"ImgExtensions": "jpg|jpeg|gif|bmp|png|ico|pcx|tiff|tga|exif|fpx|svg|psd|cdr|pcd|dxf|ufo|eps|ai|hdri|raw"
+	}
 }
