完成 获取学习计划详细信息及获取用户指定学习计划详细信息的服务接口

--- a/TeamCores.Models/TeamCores.Models.csproj
+++ b/TeamCores.Models/TeamCores.Models.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TeamCores.Common\TeamCores.Common.csproj" />
+  </ItemGroup>
+
 </Project>
