--- a/TeamCores.Domain/TeamCores.Domain.csproj
+++ b/TeamCores.Domain/TeamCores.Domain.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\TeamCores.Data\TeamCores.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Response\" />
+  </ItemGroup>
+
 </Project>
