--- a/TeamCores.Domain/TeamCores.Domain.csproj
+++ b/TeamCores.Domain/TeamCores.Domain.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\Response\" />
+    <Folder Include="Output\" />
   </ItemGroup>
 
 </Project>
