--- a/TeamCores.Web/TeamCores.Web.csproj
+++ b/TeamCores.Web/TeamCores.Web.csproj
@@ -76,5 +76,8 @@
     <ProjectReference Include="..\TeamCores.Tasks\TeamCores.Tasks.csproj" />
     <ProjectReference Include="..\TeamCores.Uploader\TeamCores.Uploader.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModel\Studing\" />
+  </ItemGroup>
 
 </Project>
