--- a/TeamCores.Web/TeamCores.Web.csproj
+++ b/TeamCores.Web/TeamCores.Web.csproj
@@ -76,5 +76,10 @@
     <ProjectReference Include="..\TeamCores.Tasks\TeamCores.Tasks.csproj" />
     <ProjectReference Include="..\TeamCores.Uploader\TeamCores.Uploader.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="Views\Course\Index.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 
 </Project>
