学习计划管理列表 及 我的学习计划列表  数据绑定

--- a/TeamCores.Web/TeamCores.Web.csproj
+++ b/TeamCores.Web/TeamCores.Web.csproj
@@ -24,8 +24,17 @@
     <Content Include="wwwroot\js\pattern.js" />
     <Content Include="wwwroot\js\sidebar.js" />
     <Content Include="wwwroot\js\study.enums.js" />
+    <Content Include="wwwroot\js\vue\components\common.js" />
+    <Content Include="wwwroot\js\vue\components\plans - 复制.my.js" />
+    <Content Include="wwwroot\js\vue\components\plans.js" />
+    <Content Include="wwwroot\js\vue\components\plans.my.js">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="wwwroot\js\vue\components\studyplanlist.js" />
     <Content Include="wwwroot\js\vue\menu.js" />
+    <Content Include="wwwroot\js\vue\plans.my.js" />
     <Content Include="wwwroot\js\vue\vue.global.js" />
+    <Content Include="wwwroot\js\vue\vue.studyplanlist.js" />
     <Content Include="wwwroot\lib\iview\dist\iview.js" />
     <Content Include="wwwroot\lib\iview\dist\iview.min.js" />
     <Content Include="wwwroot\lib\iview\dist\locale\de-DE.js" />
@@ -47,8 +56,6 @@
     <Content Include="wwwroot\lib\iview\LICENSE" />
     <Content Include="wwwroot\lib\iview\package.json" />
     <Content Include="wwwroot\lib\iview\README.md" />
-    <Content Include="wwwroot\vueComponents\grid.css" />
-    <Content Include="wwwroot\vueComponents\grid.js" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
