--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/TeamCores.Web/wwwroot/upload/2017/08/22
+/TeamCores.Web/wwwroot/upload/2017/08/22
+/TeamCores.Web/wwwroot/upload/2017/08/22
