课程管理功能

--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ __pycache__/
 /TeamCores.Web/wwwroot/upload/2017/08/22
 /TeamCores.Web/wwwroot/upload/2017/08/22
 /TeamCores.Web/wwwroot/upload/2017/08/22
+/TeamCores.Web/wwwroot/upload-2017-08-22
