--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,4 @@ __pycache__/
 /TeamCores.Web/wwwroot/upload/2017/08/22
 /TeamCores.Web/wwwroot/upload/2017/08/22
 /TeamCores.Web/wwwroot/upload-2017-08-22
+/TeamCores.Web/wwwroot/upload-2017-08-23
