--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,4 @@ __pycache__/
 /TeamCores.Web/wwwroot/upload/2017/08/22
 /TeamCores.Web/wwwroot/upload-2017-08-22
 /TeamCores.Web/wwwroot/upload-2017-08-23
+/TeamCores.Web/wwwroot/upload/2017/08
