--- a/TeamCores.Web/Properties/launchSettings.json
+++ b/TeamCores.Web/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost:5000",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:59293/",
       "sslPort": 0
@@ -15,7 +19,7 @@
       }
     },
     "TeamCores.Web": {
-      "commandName": "Project",
+      "commandName": "IIS",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
