--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,4 @@ __pycache__/
 /TeamCores.Web/wwwroot/upload-2017-08-22
 /TeamCores.Web/wwwroot/upload-2017-08-23
 /TeamCores.Web/wwwroot/upload/2017/08
+/TeamCores.Web/wwwroot/upload-2017-08-28
