--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,4 @@ __pycache__/
 /TeamCores.Web/wwwroot/upload-2017-08-23
 /TeamCores.Web/wwwroot/upload/2017/08
 /TeamCores.Web/wwwroot/upload-2017-08-28
+/TeamCores.Web/wwwroot/upload-2017-08-31
